add more english prices and descriptions

--- a/menu-ing.html
+++ b/menu-ing.html
@@ -307,7 +307,7 @@
 									<!-- <img src="./img/fotos/empezar-bisquets.jpg" alt=""
 										style="width: 100%; margin: 10px 0;"> -->
 
-									<p class="roboto-condensed brown-text mb-0">Homemade Mexican bisquets toasted  with butter and served with strawberry, guava or hibiscus flower jam.</p>
+									<p class="roboto-condensed brown-text mb-0">Homemade Mexican bisquets toasted with butter and served with strawberry, guava or hibiscus flower jam.</p>
 
 								</div>
 							</div>
@@ -540,7 +540,7 @@
 									<!-- <img src="./img/fotos/clasicos-juliette.jpg" alt=""
 										style="width: 100%; margin: 10px 0;"> -->
 
-									<p class="roboto-condensed brown-text mb-1--5">Spinach and goat's cheese omelette, bathed in red sauce, served on a poblano pepper sauce and topped with tortilla strips. served with salad, refried beans or breakfast potatoes.</p>
+									<p class="roboto-condensed brown-text mb-1--5">Spinach and goat's cheese omelette, bathed in red sauce, served on a poblano pepper sauce and topped with tortilla strips. served with salad, refried beans or breakfast potatoes. </p>
 								</div>
 							</div>
 						</div>
@@ -590,7 +590,7 @@
 									<!-- <img src="./img/fotos/paquetes-chilaquiles.jpg" alt=""
 										style="width: 100%; margin: 10px 0;"> -->
 
-									<p class="roboto-condensed brown-text mb-1--5">In green, red or mole sauce with cream, cheese,onion and grilled hanger steak.</p>
+									<p class="roboto-condensed brown-text mb-1--5">In green, red or mole sauce with cream, cheese, onion and grilled hanger steak.</p>
 								</div>
 							</div>
 						</div>
@@ -928,7 +928,7 @@
 								<div class="flex-rz space-between">
 									<p class="name roboto-condensed"><span class="mustache-text">2 eggs</span></p>
 									<span class="line-1"></span>
-									<p class="name roboto-condensed"> $145</p>
+									<p class="name roboto-condensed"> $148</p>
 								</div>
 								<div class="collapse" id="collapseClasico4">
 									<!-- <img src="./img/fotos/clasicos-pendulo.jpg" alt=""
@@ -1005,7 +1005,7 @@
 								<div class="collapse" id="collapseClasico7">
 									<!-- <img src="./img/fotos/clasicos-lenero.jpg" alt=""
 										style="width: 100%; margin: 10px 0;"> -->
-									<p class="roboto-condensed brown-text mb-1--5">Fried eggs served on a sope with refried beans and goat's cheese,bathed in a three-chili sauce and topped with sesame seeds. Served with a side of fresh tomato slices.</p>
+									<p class="roboto-condensed brown-text mb-1--5">Fried eggs served on a sope with refried beans and goat's cheese,bathed in a three-chili sauce and topped with sesame seeds. Served with a side of  fresh tomato slices.</p>
 								</div>
 							</div>
 						</div>
@@ -1076,7 +1076,7 @@
 						<div class="col-md-4"></div>
 						<div class="col-md-4 text-center">
 							<div class="text-left p1 fz-1--5">
-								<p class="roboto-condensed brown-text text-center">Our sandwiches can be made with the bread of your choice: classic baguette, dark rye baguette, white bread, aniseed bread, seeded or cranberry ciabatta. 
+								<p class="roboto-condensed brown-text text-center">Our sandwiches can be made with the bread of your choice: classic baguette, dark rye baguette, white bread, aniseed bread, seeded or cranberry ciabatta.
 									<span class="mustache-text">Served with French fries or with carrot, cucumber and jicama salad.</span></p>
 							</div>
 						</div>
@@ -1211,7 +1211,7 @@
 										role="button" aria-expanded="true" style="text-decoration: none;">
 										<div class="flex-rz space-between items-baseline">
 											<p class="name-wrap arvo flex-start">MEXICAN TABLITA</p>
-											<img class="ml-5px" src="https://pendulo.com/archivos/d4.png" alt="">
+											<!-- <img class="ml-5px" src="https://pendulo.com/archivos/d4.png" alt=""> -->
 										</div>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse"
@@ -1295,7 +1295,7 @@
 								<div class="collapse" id="collapseEntrada2">
 									<!-- <img src="./img/fotos/entradas-empanaditas.jpg" alt=""
 										style="width: 100%; margin: 10px 0;"> -->
-									<p class="roboto-condensed brown-text mb-0">Empanadas stuffed with cheese <span class="mustache-text">(2)</span>, poblano slices with cheese (2) and minced meat (2). Served with traditional sauce and cream.</p>
+									<p class="roboto-condensed brown-text mb-0">Empanadas stuffed with cheese <span class="mustache-text">(2)</span>, poblano slices with cheese <span class="mustache-text">(2)</span> and minced meat <span class="mustache-text">(2)</span>. Served with traditional sauce and cream.</p>
 
 								</div>
 							</div>
@@ -1393,7 +1393,7 @@
 								</div>
 								<div class="collapse" id="collapseEnsalada1">
 									<!-- <img src="./img/fotos/ensaladas-pera.jpg" alt="" style="width: 100%; margin: 10px 0;"> -->
-									<p class="roboto-condensed brown-text mb-1--5">Spinach salad with pear, strawberry, goat cheese, hearts of palm, grapefruit, pecans and a hibiscus dressing. </p>
+									<p class="roboto-condensed brown-text mb-1--5">Spinach salad with pear, strawberry, goat cheese, hearts of palm, grapefruits and pecans and hibiscus dressing.</p>
 								</div>
 							</div>
 						</div>
@@ -1933,7 +1933,7 @@
 									<p class="name roboto-condensed"> $219</p>
 								</div>
 								<div class="collapse" id="collapseBotana6">
-									<img src="./img/fotos/botanas-asimov.jpg" alt="" style="width: 100%; margin: 10px 0;">
+									<!-- <img src="./img/fotos/botanas-asimov.jpg" alt="" style="width: 100%; margin: 10px 0;"> -->
 
 									<p class="roboto-condensed brown-text mb-1--5">Seasoned chicken breast cubes, served with mango and habanero sauce or blackberry and chipotle sauce.</p>
 								</div>
@@ -1981,14 +1981,13 @@
 								<div class="flex-rz space-between">
 									<p class="name roboto-condensed"><span class="mustache-text">200 g</span></p>
 									<span class="line-1"></span>
-									<p class="name roboto-condensed"> $205</p>
+									<p class="name roboto-condensed"> $225</p>
 								</div>
 								<div class="collapse" id="collapseFuerte1">
-									<img src="./img/fotos/fuertes-foucault.jpg" alt=""
-										style="width: 100%; margin: 10px 0;">
+									<!-- <img src="./img/fotos/fuertes-foucault.jpg" alt=""
+										style="width: 100%; margin: 10px 0;"> -->
 
-									<p class="roboto-condensed brown-text mb-1--5">Breaded chicken breast<span class="mustache-text">(200 g)</span> stuffed with Oaxaca cheese, served in a mixed herb butter
-										sauce and served with mashed potatoes and grilled vegetables.</p>
+									<p class="roboto-condensed brown-text mb-1--5">Breaded chicken breast <span class="mustache-text">(200 g)</span> stuffed with Oaxaca cheese, served in mixed herb butter sauce and with mashed potatoes and grilled vegetables.</p>
 								</div>
 							</div>
 						</div>
@@ -1997,7 +1996,7 @@
 								<div class="d-flex justify-content-between">
 									<a class="collapse-button" data-toggle="collapse" href="#collapseFuerte2"
 										role="button" aria-expanded="true" style="text-decoration: none;">
-										<p class="name arvo flex-start">KEATS LIME CHICKEN BREAST </p>
+										<p class="name arvo flex-start">KEATS LEMON CHICKEN BREAST </p>
 									</a>
 									<a class="collapse-button collapsed" data-toggle="collapse" href="#collapseFuerte2"
 										aria-expanded="true">
@@ -2007,16 +2006,15 @@
 								<div class="flex-rz space-between">
 									<p class="name roboto-condensed"><span class="mustache-text">200 g</span></p>
 									<span class="line-1"></span>
-									<p class="name roboto-condensed"> $199</p>
+									<p class="name roboto-condensed"> $220</p>
 								</div>
 								<div class="collapse" id="collapseFuerte2">
-									<img src="./img/fotos/fuertes-keats.jpg" alt=""
-										style="width: 100%; margin: 10px 0;">
+									<!-- <img src="./img/fotos/fuertes-keats.jpg" alt=""
+										style="width: 100%; margin: 10px 0;"> -->
 
 									<p class="roboto-condensed brown-text mb-1--5">Grilled chichen breast <span
-											class="mustache-text">(200 g)</span> served on creamy lime sauce fetuccini
-										<span class="mustache-text">(200 g)</span> topped with
-										Parmesan cheese.</p>
+											class="mustache-text">(200 g)</span> served on fettuccine
+										<span class="mustache-text">(200 g)</span> with creamy lemon sauce topped with Parmesan cheese.</p>
 								</div>
 							</div>
 						</div>
@@ -2035,15 +2033,13 @@
 								<div class="flex-rz space-between">
 									<p class="name roboto-condensed"><span class="mustache-text">200 g</span></p>
 									<span class="line-1"></span>
-									<p class="name roboto-condensed"> $209</p>
+									<p class="name roboto-condensed"> $229</p>
 								</div>
 								<div class="collapse" id="collapseFuerte3">
-									<img src="./img/fotos/fuertes-dostoievski.jpg" alt=""
-										style="width: 100%; margin: 10px 0;">
+									<!-- <img src="./img/fotos/fuertes-dostoievski.jpg" alt=""
+										style="width: 100%; margin: 10px 0;"> -->
 
-									<p class="roboto-condensed brown-text mb-1--5">Grilled chicken breast <span
-											class="mustache-text">(200 g)</span> served in a beer and onion sauce, accompanied by grilled
-											vegetables and baby potatoes sautéed in garlic, parsley and butter.</p>
+									<p class="roboto-condensed brown-text mb-1--5">Grilled chicken breast <span class="mustache-text">(200 g)</span> served in a beer and onion sauce, with a side of grilled vegetables and baby potatoes sautéed in garlic, parsley and butter.</p>
 								</div>
 							</div>
 						</div>
@@ -2053,7 +2049,7 @@
 									<a class="collapse-button" data-toggle="collapse" href="#collapseFuerte4"
 										role="button" aria-expanded="true" style="text-decoration: none;">
 										<div class="flex-rz space-between items-baseline">
-											<p class="name arvo flex-start">GARRO CHICKEN SKEWERS </p>
+											<p class="name arvo flex-start">TERIYAKI GARRO CHICKEN </p>
 											<img class="ml-5px" src="https://pendulo.com/archivos/d1.png" alt="">
 										</div>
 									</a>
@@ -2065,16 +2061,14 @@
 								<div class="flex-rz space-between">
 									<p class="name roboto-condensed"><span class="mustache-text">3 pieces</span></p>
 									<span class="line-1"></span>
-									<p class="name roboto-condensed"> $188</p>
+									<p class="name roboto-condensed"> $240</p>
 								</div>
 								<div class="collapse" id="collapseFuerte4">
 									<img src="./img/fotos/fuertes-brochetas.jpg" alt=""
 										style="width: 100%; margin: 10px 0;">
 
-									<p class="roboto-condensed brown-text mb-1--5">Grilled chicken skewers <span
-											class="mustache-text">(200 g)</span>, pepper, onion and cherry tomato, seasoned with our
-											teriyaki sauce. Accompanied by sautéed green beans with mustard and sprinkled with
-											toasted sesame seeds.</p>
+									<p class="roboto-condensed brown-text mb-1--5">Sautéed chicken breast <span
+											class="mustache-text">(200 g)</span> cubes with red pepper, onion, cherry tomato, mushrooms, zucchini and green beans with our teriyaki sauce and old style mustard. Served with white rice and garnished with spring onion and toasted sesame seeds.</p>
 								</div>
 							</div>
 						</div>
