nuevos precios en ingles

--- a/menu.html
+++ b/menu.html
@@ -3340,7 +3340,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-2"></div>
-						<!--PASTEL DE CHOCOLATE FOUQUE-->
+						<!--BLUECAKE DE CHEESEBERRY-->
 						<div class="col-md-4 text-center">
 							<div class="text-left p1 fz-1--5">
 								<div class="d-flex justify-content-between">
