--- a/menu.html
+++ b/menu.html
@@ -3879,6 +3879,7 @@
 							</div>
 						</div>
 
+						<div class="col-md-4"></div>
 						<div class="col-md-4 text-center">
 							<div class="p1 fz-1--5">
 								<div class="p15px text-center brdr-1">
@@ -3889,6 +3890,7 @@
 								</div>
 							</div>
 						</div>
+						<div class="col-md-4"></div>
 					</div>
 				</div>
 
