--- a/menu-ing.html
+++ b/menu-ing.html
@@ -2589,7 +2589,7 @@
 					<div class="col-11 col-md-4 px-0 text-center collapse-button">
 						<a class="collapse-button" data-toggle="collapse" href="#collapseAfterDark"
 							aria-expanded="true">
-							<img class="w-90 my-2em" src="https://pendulo.com/archivos/titulo-desayunos-noctus-eng.png" alt="">
+							<img class="w-90 my-2em" src="https://pendulo.com/archivos/titulo-desayunos-noctus-eng-2.png" alt="">
 						</a>
 					</div>
 					<div class="col-md-4"></div>
@@ -3918,6 +3918,7 @@
 							</div>
 						</div>
 
+						<div class="col-md-4"></div>
 						<div class="col-md-4 text-center">
 							<div class="p1 fz-1--5">
 								<div class="p15px text-center brdr-1">
@@ -3927,6 +3928,7 @@
 								</div>
 							</div>
 						</div>
+						<div class="col-md-4"></div>
 					</div>
 				</div>
 
@@ -5017,7 +5019,7 @@
 										<p class="name roboto-condensed"><span> $270</p>
 									</div>
 									<div class="collapse" id="collapseClericotBeb1">
-										<p class="roboto-condensed brown-text">No hay descripción en inglés en el archivo.</p>
+										<p class="roboto-condensed brown-text">Prepared with red house wine and fresh fruit.</p>
 									</div>
 
 									<div class="d-flex justify-content-between" style="padding-top: 10px;">
@@ -5452,7 +5454,7 @@
 											<p class="name roboto-condensed"><span> $270</p>
 										</div>
 										<div class="collapse" id="collapseClericot1">
-											<p class="roboto-condensed brown-text">No hay descripción en inglés en el archivo.</p>
+											<p class="roboto-condensed brown-text">Prepared with red house wine and fresh fruit.</p>
 										</div>
 	
 										<div class="d-flex justify-content-between" style="padding-top: 10px;">
